# Executor

./: README.md  environment.yml  setup.cfg
executor/: executor.py  ibex.py
test/: executor_test.py  ibex_test.py
