[metadata]
name = Executor
version = 1.0.0
author = Francisco Javier Guzmán-Vega
author_email = fcjavier.guzman@gmail.com
description = Executor class for wrapping command-line programs with Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/guzmanfj/Executor.git
license_files = LICENSE.txt

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
